--- a/src/css/main.css
+++ b/src/css/main.css
@@ -228,8 +228,11 @@ Navbar
   justify-content: space-between;
   align-items: center;
 }
-.nav-header img {
+/* .nav-header img {
   margin-bottom: 0.375rem;
+} */
+.nav-header img {
+  margin-bottom: 3.67rem;
 }
 .toggle-btn {
   font-size: 2rem;
